--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
   },
   "simple-git-hooks": {
     "pre-commit": "npm run check"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.53.3"
   }
 }
