--- a/package.json
+++ b/package.json
@@ -38,8 +38,14 @@
     "yup": "^1.7.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.1.3",
     "@eslint/js": "^9.39.1",
     "@hookform/resolvers": "^5.2.2",
+    "@storybook/addon-a11y": "^10.1.9",
+    "@storybook/addon-docs": "^10.1.9",
+    "@storybook/addon-vitest": "^10.1.9",
+    "@storybook/react": "^10.1.9",
+    "@storybook/react-vite": "^10.1.9",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
@@ -49,6 +55,8 @@
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
     "@vitejs/plugin-react": "^5.1.1",
+    "@vitest/browser-playwright": "^4.0.15",
+    "@vitest/coverage-v8": "^4.0.15",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -58,11 +66,14 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-storybook": "^10.1.9",
     "globals": "^16.5.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "playwright": "^1.57.0",
     "prettier": "^3.7.1",
     "simple-git-hooks": "^2.13.1",
+    "storybook": "^10.1.9",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^39.0.1",
     "stylelint-order": "^7.0.0",
@@ -70,17 +81,7 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
-    "storybook": "^10.1.9",
-    "@storybook/react-vite": "^10.1.9",
-    "@chromatic-com/storybook": "^4.1.3",
-    "@storybook/addon-vitest": "^10.1.9",
-    "@storybook/addon-a11y": "^10.1.9",
-    "@storybook/addon-docs": "^10.1.9",
-    "eslint-plugin-storybook": "^10.1.9",
-    "vitest": "^4.0.15",
-    "playwright": "^1.57.0",
-    "@vitest/browser-playwright": "^4.0.15",
-    "@vitest/coverage-v8": "^4.0.15"
+    "vitest": "^4.0.15"
   },
   "simple-git-hooks": {
     "pre-commit": "npm run check"
